(2007-09-19)
 * Updated the German translation.

(2007-09-18)
 * The playlist will be floating as default.
 * (By user request) Added the option "Pause when minimized" in Preferences->
   General. If checked, the current file will be paused when the main window
   is hidden. When the main window is visible again play will resume.
   Currently it has two problems: if the file was already paused before
   hiding, smplayer won't remember it so when the main window is made visible
   the file will be played. And this setting also affects audio files, which
   maybe is not appropriate.
 * Updated the Polish translation.

(2007-09-16)
 * Replaced the QAction's activated() signal with triggered(). Now smplayer
   runs without warnings in kubuntu with Qt 4.3. And I think now the port to
   Qt 4 has really finished.
   Anyway this is a delicated change, a small mistake and something could stop
   working.
 * Updated the Hungarian translation.

(2007-09-15)
 * The script create_deb.sh changes the debian changelog so the SVN revision 
   number is added to the generated *.deb file.
 * Added new option "Channels by default" in Preferences->General->Audio.
 * BTW, now the initial_* options in preferences are stored in its own
   section "[default]" in the config file.

(2007-09-14)
 * Added a small program (getrev) to extract the SVN revision number. Intended
   for Windows, where the script get_svn_revision.sh doesn't work.
 * Compiling as default the old code to resize the main window, as it has been
   reported that the new one doesn't work on some systems.

(2007-09-13)
 * Updated the Ukrainian, German and Japanese translations.
 * Now version.cpp returns the svn revision number.

[b]Version 0.5.59[/b]
 * Updated the Ukrainian translation.
 * Bugfix: when passing only one file through command line, the file wasn't
   added to the playlist.
 * Added support for right to left languages. The arrow icons are reversed.